--- a/images/70-iso/config.yaml
+++ b/images/70-iso/config.yaml
@@ -1,3 +1,14 @@
 # See https://github.com/rancher/k3os/blob/master/README.md#configuration
 # and https://github.com/rancher/k3os/blob/master/README.md#remastering-iso
 # This file is a placeholder for custom configuration when building a custom ISO image.
+run_cmd:
+- "echo hello, run command"
+- "mkdir -p /var/lib/rancher/k3s/server/manifests"
+- "mkdir -p /var/lib/rancher/k3s/server/static"
+- "cp /usr/var/lib/rancher/k3s/server/static/harvester-0.1.0.tgz /var/lib/rancher/k3s/server/static/harvester-0.1.0.tgz"
+- "cp /usr/var/lib/rancher/k3s/server/manifests/harvester-chart.yaml /var/lib/rancher/k3s/server/manifests/harvester-chart.yaml"
+k3os:
+  password: rancher
+  dns_nameservers:
+  - 8.8.8.8
+  - 114.114.114.114
