--- a/images/70-iso/grub.cfg
+++ b/images/70-iso/grub.cfg
@@ -6,7 +6,7 @@ set gfxpayload=keep
 insmod all_video
 insmod gfxterm
 
-menuentry "k3OS Installer" {
+menuentry "Install Harvester" {
   search.fs_label K3OS root
   set sqfile=/k3os/system/kernel/current/kernel.squashfs
   loopback loop0 /$sqfile
