--- a/images/70-iso/config.yaml
+++ b/images/70-iso/config.yaml
@@ -2,12 +2,11 @@
 # and https://github.com/rancher/k3os/blob/master/README.md#remastering-iso
 # This file is a placeholder for custom configuration when building a custom ISO image.
 run_cmd:
-- "echo hello, run command"
 - "mkdir -p /var/lib/rancher/k3s/server/manifests"
 - "mkdir -p /var/lib/rancher/k3s/server/static"
-#- "mkdir -p /var/lib/rancher/k3s/agent/images"
+- "mkdir -p /var/lib/rancher/k3s/agent/images"
 - "cp /usr/var/lib/rancher/k3s/server/static/* /var/lib/rancher/k3s/server/static/"
 - "cp /usr/var/lib/rancher/k3s/server/manifests/* /var/lib/rancher/k3s/server/manifests/"
-#- "cp /usr/var/lib/rancher/k3s/agent/images/* /var/lib/rancher/k3s/agent/images/"
+- "cp /usr/var/lib/rancher/k3s/agent/images/* /var/lib/rancher/k3s/agent/images/"
 k3os:
-  #password: rancher
+  password: rancher
