--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -2,6 +2,9 @@ FROM golang:1.13-alpine
 
 ARG DAPPER_HOST_ARCH
 ENV ARCH $DAPPER_HOST_ARCH
+# helm 3 version
+ENV HELM_VERSION v3.3.1
+ENV HELM_URL=https://get.helm.sh/helm-${HELM_VERSION}-linux-${ARCH}.tar.gz
 
 RUN apk -U add bash git gcc musl-dev docker vim less file curl wget ca-certificates
 RUN go get -d golang.org/x/lint/golint && \
@@ -11,6 +14,11 @@ RUN go get -d golang.org/x/lint/golint && \
 RUN if [ "${ARCH}" == "amd64" ]; then \
         curl -sL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.27.0; \
     fi
+
+# set up helm
+RUN mkdir /usr/tmp && \
+    curl ${HELM_URL} | tar xvzf - --strip-components=1 -C /usr/tmp/ && \
+    mv /usr/tmp/helm /usr/bin/helm
 
 RUN go get -d github.com/rancher/trash && \
     git -C /go/src/github.com/rancher/trash checkout -b current v0.2.6 && \
