--- a/images/70-iso/longhorn.yaml
+++ b/images/70-iso/longhorn.yaml
@@ -11,3 +11,5 @@ metadata:
 spec:
   chart: https://%{KUBERNETES_API}%/static/charts/longhorn-1.0.2.tgz
   targetNamespace: longhorn-system
+  set:
+    persistence.defaultClassReplicaCount: 1
