--- a/images/50-package/Dockerfile
+++ b/images/50-package/Dockerfile
@@ -16,7 +16,7 @@ COPY --from=bin /output/  /output/k3os/system/k3os/${VERSION}/
 
 WORKDIR /output/k3os/system/k3s
 RUN mkdir -vp $(cat version) /output/sbin
-RUN mv -vf crictl ctr kubectl harvester-console /output/sbin/
+RUN mv -vf crictl ctr kubectl /output/sbin/
 RUN ln -sf $(cat version) current
 RUN mv -vf install.sh current/k3s-install.sh
 RUN mv -vf k3s current/
