--- a/images/20-progs/Dockerfile
+++ b/images/20-progs/Dockerfile
@@ -26,3 +26,6 @@ COPY --from=k3os /output/ /output/
 WORKDIR /output
 RUN git clone --branch v0.7.0 https://github.com/ahmetb/kubectx.git \
  && chmod -v +x kubectx/kubectx kubectx/kubens
+
+# Additional utils
+RUN apk --no-cache add zstd
