--- a/images/70-iso/Dockerfile
+++ b/images/70-iso/Dockerfile
@@ -1,3 +1,4 @@
+# syntax=docker/dockerfile:experimental
 ARG REPO
 ARG TAG
 FROM ${REPO}/k3os-package:${TAG} as package
@@ -21,6 +22,16 @@ COPY grub.cfg /usr/src/iso/boot/grub/grub.cfg
 COPY --from=package /output/ /usr/src/iso/
 
 COPY config.yaml /usr/src/iso/k3os/system/
+
+RUN mkdir -p /usr/src/iso/var/lib/rancher/k3s/agent/images \
+    /usr/src/iso/var/lib/rancher/k3s/server/static/charts \
+    /usr/src/iso/var/lib/rancher/k3s/server/manifests
+COPY charts/* /usr/src/iso/var/lib/rancher/k3s/server/static/charts
+COPY manifests/* /usr/src/iso/var/lib/rancher/k3s/server/manifests
+RUN --mount=type=bind,source=/,target=/ctx cp /ctx/harvester-images.tar.zst \
+    /usr/src/iso/var/lib/rancher/k3s/agent/images &>/dev/null || true
+COPY cni /usr/src/iso/cni
+
 RUN mkdir -p /output && \
     grub-mkrescue -o /output/k3os.iso /usr/src/iso/. -- -volid K3OS -joliet on && \
     [ -e /output/k3os.iso ] # grub-mkrescue doesn't exit non-zero on failure
